welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: value int
int nbPas=0;
^Variables:6: error: not found: value nbPas
	nbPas = nbPas + 1;
        ^Variables:14: error: not found: value nbPas
while (nbPas=0)
       ^Variables:17: error: not found: value nbPas
	nbPas = nbPas - 1
        ^Variables:20: error: not found: value nbPas
if (nbPas=0)
    ^